# gspace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.MD  SECURITY.md  makefile  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: lint-and-format.yml  wheels.yaml
examples/: advanced_features.py  basic_usage.py
gspace/: __init__.py  _version.py
gspace/auth/: auth.py  token_manager.py
gspace/calender/: __init__.py  calender.py
gspace/cli/: __init__.py  main.py
gspace/client/: __init__.py  client.py
gspace/docs/: __init__.py  docs.py
gspace/drive/: drive.py
gspace/gmail/: gmail.py
gspace/sheets/: __init__.py  sheets.py
gspace/utils/: __init__.py  batch_requests.py  logger.py  rate_limiter.py  scopes.py
gspace/webhooks/: __init__.py  webhook_handler.py
tests/: test_basic.py
